--- a/css/navbar.css
+++ b/css/navbar.css
@@ -108,3 +108,22 @@
     border-radius: 50%;
     margin-left: 1rem;
 }
+
+@media (max-width: 700px) {
+    .lista {
+        display: none;
+    }
+
+    .menu {
+        margin-left: 1rem;
+        display: flex;
+    }
+
+    .logo h3 {
+        margin-right: 1x;
+    }
+
+    .logo img {
+        margin-left: 0;
+    }
+}
