--- a/css/index.css
+++ b/css/index.css
@@ -2,10 +2,19 @@
 
 body {
     margin: 0;
-    background-image: url(../imagens/13167.jpg);
+    background-image: linear-gradient(to bottom, rgba(219, 4, 247, 0.856), rgb(71, 9, 129));
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center center;
+}
+.romano {
+    position: fixed;
+    opacity: 25%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
 }
 
 .imagem {
@@ -22,7 +31,7 @@ main {
     left: 50%;
     transform: translate(-50%, -55%);
     width: 70%;
-    height: 80%;
+    height: 95%;
 }
 
 .entradas {
@@ -36,8 +45,10 @@ main {
     left: 50%;
     transform: translate(-50%, -50%);
     position: absolute;
+    border-radius: 20px;
     width: 640px;
-    height: 400px;
+    height: 380px;
+    box-shadow: 0px 0px 10px;
     overflow: hidden;
 }
 
@@ -134,6 +145,11 @@ main {
 @media (max-width:700px) {
     main {
         width: 95%;
+    }
+
+    .romano {
+        width: 1000px;
+        opacity: 25%;
     }
 
     .btn_menu {
