--- a/css/navbar.css
+++ b/css/navbar.css
@@ -82,6 +82,13 @@
     transition: 1s;
 }
 
+.menuAtivo {
+    width: 100%;
+    height: 200px;
+    margin-top: 180px;
+    position: fixed;
+    display: none;
+}
 
 .logo {
     display: flex;
@@ -110,13 +117,27 @@
 }
 
 @media (max-width: 700px) {
+    .menuAtivo {
+        display: flex;
+        border-radius: 0px 20px;
+        background-image: linear-gradient(to right, white, rgba(255, 255, 255, 0.76));
+    }
+
     .lista {
         display: none;
     }
 
+    .navBar {
+        align-items: center;
+        justify-content: space-between;
+    }
     .menu {
-        margin-left: 1rem;
         display: flex;
+        position: absolute;
+        bottom: 45%;
+        left: 0;
+        
+        transform: translate(-50%, 50%);
     }
 
     .logo h3 {
@@ -126,4 +147,8 @@
     .logo img {
         margin-left: 0;
     }
+}
+
+@media (max-height:950px) {
+
 }
