--- a/css/index.css
+++ b/css/index.css
@@ -224,7 +224,14 @@ main {
 
     }
 
-    .somos h1, .somos h4{
+    .somos h2{
+        display: flex;
+        font-size: 40px;
+        margin-left: 10px;
+    }
+
+    .somos h4{
+        font-size: 30px;
         display: flex;
         margin-left: 10px;
     }
