--- a/css/navbar.css
+++ b/css/navbar.css
@@ -140,6 +140,7 @@
         display: flex;
         margin-top: 300px;
         border-radius: 0px 20px;
+        transition: 0.5s;
         background-image: linear-gradient(to right, white, rgba(255, 255, 255, 0.76));
     }
 
@@ -151,11 +152,8 @@
 
     #inicio a{
         padding: 10px 20px;
-        color:orange;
-    }
-
-    #inicio a:hover {
-        color: white;
+        color: #9519f0;
+        background-image: none;
     }
 
     #pedido {
@@ -166,6 +164,8 @@
 
     #pedido a{
         padding: 10px 20px;
+        color: #9519f0;
+        background-image: none;
     }
 
     #quem {
@@ -177,6 +177,8 @@
 
     #quem a{
         padding: 10px 20px;
+        color: #9519f0;
+        background-image: none;
     }
 
     #feedback {
@@ -188,12 +190,24 @@
 
     #feedback a{
         padding: 10px 20px;
+        color: #9519f0;
+        background-image: none;
     }
+
+    .lista a {
+        transition: 1s;
+    }
+    .lista a:hover {
+        text-decoration: underline;
+        text-decoration-color: #17cf06;
+    }
+    
 
     .exit.Off~.lista {
         display: flex;
         justify-content: space-between;
         position: absolute;
+        transition: 1s;
         width: 100%;
         font-size: x-large;
         margin-top: 80px;
