--- a/css/navbar.css
+++ b/css/navbar.css
@@ -249,4 +249,61 @@
     }
 }
 
-@media (max-height:950px) {}
+@media (max-height:450px) {
+
+    .navBar{
+        position: fixed;
+        top: 50%;
+        transform: translateY(-100%);
+        background-color: transparent;
+        width: 80px;
+        height: 50px;
+    }
+
+    .logo {
+        display: none
+    }
+
+    #menu {
+        position: absolute;
+        display: flex;
+        background-color: black;
+        border-radius: 50px;
+        width: 60px;
+        height: 60px;
+    }
+
+    .menu {
+        margin: 0px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        display: flex;
+
+    }
+
+    .lista {
+        display: none;
+    }
+
+    .menuAtivo {
+        display: none;
+        position: absolute;
+        left: 0px;
+        top: -400px;
+        width: 100vw;
+        border-radius: 0px 20px;
+        transition: all 0.1s;
+        z-index: 1;
+        background-image: linear-gradient(to right, white, rgba(255, 255, 255, 0.76));
+    }
+
+    .deitado {
+        position: fixed;
+        z-index: 5;
+        width: 100vw;
+        height: 100vh;
+        background-color: aliceblue;
+    }
+}
