--- a/css/navbar.css
+++ b/css/navbar.css
@@ -267,7 +267,7 @@
     #menu {
         position: absolute;
         display: flex;
-        background-color: black;
+        background-color: rgba(0, 0, 0, 0.445);
         border-radius: 50px;
         width: 60px;
         height: 60px;
@@ -276,7 +276,7 @@
     .menu {
         margin: 0px;
         position: absolute;
-        top: 50%;
+        top: 55%;
         left: 50%;
         transform: translate(-50%,-50%);
         display: flex;
