--- a/paginas/pedidos.css
+++ b/paginas/pedidos.css
@@ -5,3 +5,75 @@
 #pedido a:hover {
     color: #7a918d;
 }
+
+.cardapio {
+    margin-top: 60px;
+    width: 300px;
+    height: 75%;
+    border-radius: 15px;
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.897), rgba(129, 126, 126, 0.822));
+}
+
+.cardapio img {
+    top: 3%;
+    position: absolute;
+    width: 135px;
+    height: 170px;
+    border-radius: 15px;
+    box-shadow: 4px 2px 12px;
+    left: 50%;
+    transform: translate(-50%);
+}
+
+.cardapio #_400ml {
+    position: absolute;
+    z-index: 1;
+    left: 35%;
+    transition: left 0.5s;
+}
+
+.cardapio #_400ml:hover {
+    position: absolute;
+    z-index: 2;
+    left: 45%;
+}
+
+.cardapio #_300ml {
+    position: absolute;
+    transition: left 0.5s;
+    left: 65%;
+}
+
+.cardapio #_300ml:hover {
+    left: 55%;
+    z-index: 2;
+}
+
+.pedido {
+    margin-top: 220px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+input:checked {
+    color: blueviolet;
+    background-color: blueviolet;
+}
+
+.ingredientes {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.fechar {
+    margin-top: 20px;
+    width: 90px;
+    height: 30px;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+}
