--- a/paginas/pedidos.css
+++ b/paginas/pedidos.css
@@ -8,7 +8,7 @@
 
 .cardapio {
     margin-top: 60px;
-    width: 300px;
+    width: 350px;
     height: 75%;
     border-radius: 15px;
     background-image: linear-gradient(to bottom, rgba(34, 33, 33, 0.507), rgba(0, 0, 0, 0.822));
@@ -28,7 +28,7 @@
 .cardapio #_400ml {
     position: absolute;
     z-index: 1;
-    left: 35%;
+    left: 30%;
     transition: left 0.5s;
 }
 
@@ -41,7 +41,7 @@
 .cardapio #_300ml {
     position: absolute;
     transition: left 0.5s;
-    left: 65%;
+    left: 70%;
 }
 
 .cardapio #_300ml:hover {
@@ -49,8 +49,16 @@
     z-index: 2;
 }
 
+._400m {
+    border: 2px solid #9619f0;
+}
+
+._300m {
+    border: 2px solid #9619f0;
+}
+
 .pedido {
-    margin-top: 220px;
+    margin-top: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -59,9 +67,15 @@
 
 }
 
-input:checked {
-    color: blueviolet;
-    background-color: blueviolet;
+.formulario {
+    width: 185px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.formulario input {
+    display: none;
 }
 
 .ingredientes {
