--- a/paginas/pedidos.css
+++ b/paginas/pedidos.css
@@ -11,7 +11,7 @@
     width: 350px;
     height: 75%;
     border-radius: 15px;
-    background-image: linear-gradient(to bottom, rgba(34, 33, 33, 0.507), rgba(0, 0, 0, 0.822));
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.74),rgba(41, 41, 41, 0.596));
 }
 
 .cardapio img {
@@ -51,10 +51,24 @@
 
 ._400m {
     border: 2px solid #9619f0;
+    z-index: 2;
 }
 
 ._300m {
     border: 2px solid #9619f0;
+    z-index: 2;
+}
+
+.formulario label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: linear-gradient(to bottom, rgb(255, 0, 234), rgba(205, 50, 252, 0.842),blueviolet, rgba(0, 0, 0, 0.445));
+    width: 64px;
+    height: 20px;
+    border: 1px solid white;
+    border-radius: 15px;
+    cursor: pointer;
 }
 
 .pedido {
@@ -79,6 +93,7 @@
 }
 
 .ingredientes {
+    margin-top: 25px;
     display: flex;
     flex-direction: column;
     gap: 10px;
