--- a/css/index.css
+++ b/css/index.css
@@ -141,16 +141,17 @@ main {
     border-radius: 80px;
     padding: 1rem;
     position: absolute;
-    width: 740px;
+    width: 470px;
+    height: 90px;
     left: 50%;
     bottom: 0;
     transform: translate(-50%, 0%);
     display: flex;
     align-items: center;
-    margin: 0px 1rem 1rem 1rem;
+    margin: 0px;
 }
 .somos img {
-    width: 120px;
+    width: 100px;
     margin-right: 1rem;
 }
 .somos p {
@@ -320,5 +321,31 @@ main {
     .ativo4~.imagem {
         margin-left: -960px;
         transition: 1s;
+    }
+}
+
+@media (max-height: 750px) {
+    .somos {
+        width: 300px;
+        height: 65px;
+        text-align: center;
+    }   
+
+    #familia {
+        width: 78px;
+    }
+
+    .slider {
+        width: 380px;
+        height: 230px;
+    }
+
+    .imagem {
+        width: 380px;
+        height: 230px;
+    }
+    .imagem img {
+        width: 380px;
+        height: 270px;
     }
 }
