--- a/paginas/pedidos.css
+++ b/paginas/pedidos.css
@@ -51,11 +51,13 @@
 ._400m {
     border: 2px solid #9619f0;
     z-index: 3;
+    left: 50%;
 }
 
 ._300m {
     border: 2px solid #9619f0;
     z-index: 3;
+    left: 50%;
 }
 
 .formulario label {
@@ -92,11 +94,48 @@
 }
 
 .ingredientes {
-    margin-top: 25px;
+    margin-top: 35px;
+    width: 220px;
     display: flex;
     flex-direction: column;
     gap: 10px;
     color: white;
+}
+
+.ingredientes img {
+    position: relative;
+    display: flex;
+    width: 50px;
+    height: 50px;
+    box-shadow: none;
+    cursor: pointer;
+}
+
+.cardapio section {
+    width: 220px;
+    height: 3px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.37);
+}
+
+.one,.two,.tree {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.one img, .two img,.tree img {
+    left: 40px;
+}
+
+.tree #bolinha_jpg {
+    left: 45px;
+}
+
+.peg {
+    opacity: 75%;
+    background-color: blue;
+    border: 3px solid #9619f0;
 }
 
 .fechar {
