--- a/paginas/pedidos.css
+++ b/paginas/pedidos.css
@@ -202,6 +202,14 @@ button {
         width: 50px;
     }
 
+    .cardapio {
+        margin-top: 30px;
+        width: 350px;
+        height: 75%;
+        border-radius: 15px;
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.74),rgba(41, 41, 41, 0.596));
+    }
+
     .cardapio img {
         top: 3%;
         position: absolute;
