--- a/css/index.css
+++ b/css/index.css
@@ -348,4 +348,43 @@ main {
         width: 380px;
         height: 270px;
     }
+
+    .ativo1~.imagem {
+        margin-left: 0;
+        transition: 1s;
+    }
+    
+    .ativo2~.imagem {
+        margin-left: -380px;
+        transition: 1s;
+    }
+    
+    .ativo3~.imagem {
+        margin-left: -760px;
+        transition: 1s;
+    }
+    
+    .ativo4~.imagem {
+        margin-left: -1140px;
+        transition: 1s;
+    }
+}
+
+@media (max-height: 600px) {
+    .navBar {
+        font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+        position: fixed;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        height: 50px;
+        background-color: black;
+        margin-top: 10px;
+        z-index: 4;
+    }
+
+    .logo img{
+        width: 50px;
+    }
 }
