--- a/paginas/pedidos.css
+++ b/paginas/pedidos.css
@@ -202,8 +202,37 @@ button {
         width: 50px;
     }
 
+    .exit{
+        position: fixed;
+        width: 40px;
+        top: 15px;
+        left: 18px;
+        display: none;
+        z-index: 5;
+        cursor: pointer;
+    }
+
+    .menuAtivo {
+        display: flex;
+        margin-top: 250px;
+        border-radius: 0px 20px;
+        transition: all 0.1s;
+        background-image: linear-gradient(to right, white, rgba(255, 255, 255, 0.76));
+    }
+
+    .exit.Off~.lista {
+        display: flex;
+        justify-content: space-between;
+        position: absolute;
+        transition: 1s;
+        width: 100%;
+        font-size: large;
+        margin-top: 60px;
+        z-index: 5;
+    }
+
     .formulario {
-        width: 214px;
+        width: 210px;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -220,8 +249,8 @@ button {
     .cardapio img {
         top: 3%;
         position: absolute;
-        width: 100px;
-        height: 120px;
+        width: 94px;
+        height: 108px;
         border-radius: 15px;
         box-shadow: 4px 2px 12px;
         left: 50%;
@@ -229,7 +258,7 @@ button {
     }
 
     .pedido {
-        margin-top: 145px;
+        margin-top: 130px;
         display: flex;
         flex-direction: column;
         align-items: center;
